[gd_scene load_steps=9 format=2]

[ext_resource path="res://Ability/Charge/Charge.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ability/Charge/Abilities/VacuumBomb/VacuumBomb.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://VFX/shaders/Shockwave.shader" type="Shader" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0
height = 0.0

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/center = Vector2( 0.5, 0.5 )
shader_param/force = 0.4
shader_param/size = 0.0
shader_param/thickness = 0.1

[sub_resource type="Animation" id=6]
resource_name = "explosion"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:material:shader_param/size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.82 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.5, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:material:shader_param/force")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.82, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.4, 0.3, 0.4, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect:material:shader_param/thickness")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.82, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.1, 0.1, 0.1, 0.02 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("EnemyDetector:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 5, 5 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("EnemyDetector/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[node name="VacuumBomb" instance=ExtResource( 1 )]
script = ExtResource( 2 )
title = "VacuumBomb"
cooldown = 3.0
damage_tag = 7
max_speed = 400.0
min_speed = 100.0

[node name="HitBox" type="Area2D" parent="." index="3"]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" index="0"]
rotation = 1.5708
scale = Vector2( 1e-05, 1e-05 )
shape = SubResource( 1 )

[node name="EnemyDetector" type="Area2D" parent="." index="4"]
scale = Vector2( 1e-05, 1e-05 )
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector" index="0"]
rotation = 1.5708
shape = SubResource( 4 )
disabled = true

[node name="Sprite" type="Sprite" parent="." index="5"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="." index="6"]
material = SubResource( 5 )
margin_left = -75.0
margin_top = -75.0
margin_right = 75.0
margin_bottom = 75.0

[node name="Animation" type="AnimationPlayer" parent="." index="7"]
anims/explosion = SubResource( 6 )

[connection signal="execute_charge" from="." to="." method="_on_VacuumBomb_execute_charge"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="body_exited" from="EnemyDetector" to="." method="_on_EnemyDetector_body_exited"]
